# nexar

./: .gitignore  404.html  LICENSE  README.md  README_example.py  index.html  mkdocs.yml  objects.inv  pyproject.toml  riot-key.sh.example  run_tests.sh  sitemap.xml  test.py  test_async_conversion.py  test_enum_conversion.py  test_logging_transition.py  test_rate_limit_no_cache.py  test_rate_limit_stress.py
.github/workflows/: ci.yml
FAQ/: index.html
client-features/caching/: index.html
client-features/debug-responses/: index.html
client-features/rate-limiting/: index.html
docs/: FAQ.md  caching.md  index.md  player-api.md  puuid.md  quick_start.md  rate-limiting.md  why-not-nexar.md
docs/client-features/: caching.md  debug-responses.md  rate-limiting.md
docs/examples/: batch_players.md  champ_performance.md  match_history.md  player_performance.md  soft_players_by_rank.md
docs/reference/: client.md
docs/reference/models/: match.md  participant-list.md  player.md
docs/snippets/caching/: demo.py
docs/snippets/client-features/: rate_limiting.py
docs/snippets/examples/: all_examples.py  batch_players.py  champ_performance.py  match_history.py  player_performance.py  sort_players_by_rank.py
docs/snippets/quick_start/: 01_client_demo.py  02_player.py  03_match.py
examples/: README.md  advanced_challenges_insights.py  caching_example.py  challenges_analysis_example.py  league_entries_example.py  logging_example.py  match_ids_example.py  player_example.py  rate_limiting_example.py  simple_player_demo.py  team_challenges_analysis.py
examples/advanced/: challenges_analysis.py  multi_player_comparison.py  role_analysis.py
examples/api/: league_entries.py  match_ids.py
examples/api_wrapper/: README.md  league_entries.py  match_ids.py
examples/async_examples/: basic_async_example.py  test_rate_limiting.py  test_rate_limiting_no_cache.py
examples/basic/: README_example.py  batch_players.py  match_history.py  participant_list_demo.py  performance_analysis.py  player_by_riot.py  player_info.py  sort_players_by_rank.py
examples/batch_players/: index.html
examples/champ_performance/: index.html
examples/features/: api_monitoring.py  caching.py  debug_responses.py  feature_logging.py  logging.py  rate_limiting.py
examples/match_history/: index.html
examples/player_performance/: index.html
examples/soft_players_by_rank/: index.html
quick_start/: index.html
reference/client/: index.html
reference/models/match/: index.html
reference/models/participant-list/: index.html
reference/models/player/: index.html
scripts/: update_readme_example.py
search/: search_index.json
snippets/caching/: default.py  demo.py
snippets/client-features/: rate_limiting.py
snippets/examples/: all_examples.py
snippets/quick_start/: 01_client_demo.py  02_player.py  03_match.py
src/nexar/: __init__.py  cache.py  client.py  enums.py  exceptions.py  logging.py  models.py  rate_limiter.py  utils.py
src/nexar/models/: __init__.py  account.py  league.py  match_list.py  player.py  stats.py
src/nexar/models/match/: __init__.py  challenges.py  match.py  participant.py  participant_list.py  perks.py  team.py
tests/: __init__.py  conftest.py  generate_mocks.py  mock_responses.json  test_client.py  test_enums.py  test_exceptions.py  test_league.py  test_match_ids.py  test_match_list.py  test_match_models.py  test_models.py  test_participant_list.py  test_player.py  test_player_clean.py  test_rate_limiter.py  test_utils.py
tests_rate_limit/: test_rate_limiter.py
why-not-nexar/: index.html
