[project]
name = "nexar"
version = "0.1.0"
description = "A simple, Pythonic SDK for Riot's League of Legends API"
readme = "README.md"
authors = [
    { name = "bex", email = "30572280+JoshPaulie@users.noreply.github.com" },
]
requires-python = ">=3.13"
dependencies = ["aiohttp>=3.12.13", "aiohttp-client-cache[all,sqlite]>=0.13.0"]

[dependency-groups]
dev = [
    "mypy>=1.16.1",
    "pytest>=8.4.1",
 "pytest-asyncio>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.ruff.lint]
# select = ["E4", "E7", "E9", "F", "I", "N", "UP"]
select = ["ALL"]
ignore = [
    "T201",    # Allow print statements
    "D107",    # Ignore missing docstring in __init__
    "PLR0913", # Ignore too many return statements
    "D212",    # Ignore dumb rule about docstrings and how they start
    "D105",    # Ignore missing docstring in magic methods
    "D401",    # Allow declarative docstrings
    "DTZ006",  # Ignore missing tz in datetime
]

[tool.ruff.lint.per-file-ignores]
"examples/*.py" = [
    "ERA001",  # Allow commented out code in examples
    "C901",    # Allow long main functions in examples
    "PLR2004", # Allow magic numbers in examples
    "INP001",  # Disable implicit namespace package error in examples
]
"tests/*.py" = [
    "S101", # Allow assert statements in tests
]

[tool.ruff]
line-length = 120
